Made changes in listOfBlog and deleteBlog APIs
